--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,16 @@
 *
 
 !.gitignore
-!code/
-!code/**
+!python/
+!python/**
+!.github/
+!.github/**
+!requirements.txt
+!requirements-dev.txt
+!pyproject.toml
 
-code/**/*.pyc
-code/**/__pycache__/
+python/**/*.pyc
+python/**/__pycache__/
 
 graphs/
 scrobble_analysis/
