--- a/.github/actions/setup-python/action.yml
+++ b/.github/actions/setup-python/action.yml
@@ -23,7 +23,7 @@ runs:
       uses: actions/cache@v4
       with:
         path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ inputs.python-version }}-${{ hashFiles('config/requirements*.txt') }}
+        key: ${{ runner.os }}-pip-${{ inputs.python-version }}-${{ hashFiles('requirements*.txt') }}
         restore-keys: |
           ${{ runner.os }}-pip-${{ inputs.python-version }}-
           ${{ runner.os }}-pip-
@@ -32,14 +32,14 @@ runs:
       shell: bash
       run: |
         python -m pip install --upgrade pip
-        if [ -f config/requirements.txt ]; then
-          pip install -r config/requirements.txt
+        if [ -f requirements.txt ]; then
+          pip install -r requirements.txt
         fi
 
     - name: Install development dependencies
       if: inputs.install-dev-deps == 'true'
       shell: bash
       run: |
-        if [ -f config/requirements-dev.txt ]; then
-          pip install -r config/requirements-dev.txt
+        if [ -f requirements-dev.txt ]; then
+          pip install -r requirements-dev.txt
         fi
