--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,27 @@
 # Project configuration
-# Contains settings for development tools
+# Contains settings for development tools and package metadata
 
 [project]
 name = "scrobble-analysis"
 version = "1.0.0"
 description = "Last.fm scrobble analysis tool"
 requires-python = ">=3.10"
+dependencies = [
+    "requests>=2.31.0",
+    "matplotlib>=3.8.0",
+    "numpy>=1.24.0",
+]
+
+[project.optional-dependencies]
+dev = [
+    "ruff>=0.4.0",
+    "mypy>=1.10.0",
+    "types-requests>=2.31.0",
+    "bandit>=1.7.0",
+]
+
+[project.scripts]
+scrobble-analysis = "scrobble_analysis.cli:main"
 
 # ------------------------------------------------------------------------------
 # Ruff Configuration (Linter & Formatter)
@@ -14,7 +30,7 @@ requires-python = ">=3.10"
 [tool.ruff]
 target-version = "py310"
 line-length = 100
-src = ["python"]
+src = ["src"]
 
 [tool.ruff.lint]
 select = [
@@ -34,7 +50,7 @@ ignore = [
 ]
 
 [tool.ruff.lint.isort]
-known-first-party = ["helpers"]
+known-first-party = ["scrobble_analysis"]
 
 [tool.ruff.format]
 quote-style = "double"
