--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,13 @@
 # Project configuration
 # Contains settings for development tools and package metadata
 
+[build-system]
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools.packages.find]
+where = ["src"]
+
 [project]
 name = "scrobble-analysis"
 version = "1.0.0"
