Add Last.fm Scrobble Analysis documentation with detailed insights and visualizations
- Introduced comprehensive analysis of scrobble data from June 2025 to February 2026.
- Included monthly scrobble activity, mood distribution, primary mood timeline, top artists, overall genre distribution, and listening activity by day and time.
- Added visualizations to support data insights and trends.
- Provided subjective analysis reflecting on listening habits and mood correlations.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Default: ignore everything, explicitly allow what we want
+# ignore everything
 *
 
 # Core files
@@ -45,3 +45,7 @@ env/
 # Tool caches
 .ruff_cache/
 .mypy_cache/
+
+# Docs (GitHub Pages)
+!docs/
+!docs/**
